Fix layout issues

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -76,3 +76,7 @@ html, body {
 .actions {
   margin-top: 10px;
 }
+
+.pad-index-reviews {
+  padding-left: 20px;
+}
